# youtube-podcast-analyser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analyser.py  app.py  chapters.py  config.py  docker-compose.yml  exporter.py  main.py  pyproject.toml  requirements.txt  transcribe.py  transcript_fetcher.py  utils.py
frontend/: Dockerfile  README.md  app.py  pyproject.toml  url_validator.py
